[gd_scene load_steps=13 format=3 uid="uid://bpxd1rjiry1y7"]

[ext_resource type="Script" path="res://ghost_boss/ghost_boss.gd" id="1_0ls8f"]
[ext_resource type="Texture2D" uid="uid://qt5cyoynvqh4" path="res://ghost_boss/ghostboss.png" id="1_hg7yi"]
[ext_resource type="PackedScene" uid="uid://b4vif20msc4io" path="res://ghost_boss/boss_bullet.tscn" id="2_pa34f"]
[ext_resource type="PackedScene" uid="uid://c5cnd4vyshipc" path="res://ghost_boss/ghost_furniture.tscn" id="3_r8c6h"]
[ext_resource type="Texture2D" uid="uid://c0ud3b07vkvvm" path="res://line (1).png" id="5_42n8q"]
[ext_resource type="Texture2D" uid="uid://ba3ms41vcysj0" path="res://arc (1).png" id="6_0ygok"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_57aqk"]
radius = 69.0
height = 172.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08l0t"]
bg_color = Color(0.82606, 0.82606, 0.82606, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sh2yb"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id="Animation_5gg4p"]
resource_name = "squish"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.51, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.06), Vector2(1, 1), Vector2(1.06, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_jjqi3"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3u70"]
_data = {
"show": SubResource("Animation_jjqi3"),
"squish": SubResource("Animation_5gg4p")
}

[node name="GhostBoss" type="CharacterBody2D"]
script = ExtResource("1_0ls8f")
bullet_scene = ExtResource("2_pa34f")
furniture_scene = ExtResource("3_r8c6h")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_hg7yi")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_57aqk")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-94, 0)

[node name="FurnTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -70.0
offset_top = -120.0
offset_right = 71.0
offset_bottom = -96.0
theme_override_styles/background = SubResource("StyleBoxFlat_08l0t")
theme_override_styles/fill = SubResource("StyleBoxFlat_sh2yb")
show_percentage = false

[node name="1" type="Sprite2D" parent="."]
position = Vector2(-1.517, -120)
scale = Vector2(0.231116, 0.148148)
texture = ExtResource("5_42n8q")

[node name="2" type="Sprite2D" parent="."]
position = Vector2(-66, -108)
scale = Vector2(0.148438, 0.148438)
texture = ExtResource("6_0ygok")

[node name="3" type="Sprite2D" parent="."]
position = Vector2(-1.50851, -96)
scale = Vector2(0.234782, 0.148148)
texture = ExtResource("5_42n8q")

[node name="4" type="Sprite2D" parent="."]
position = Vector2(63, -108)
rotation = -3.14159
scale = Vector2(0.148438, 0.148438)
texture = ExtResource("6_0ygok")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y3u70")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FurnTimer" to="." method="_on_furn_timer_timeout"]
